--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/material": "^5.16.4",
+    "@tanstack/react-query": "^5.51.9",
+    "lodash": "^4.17.21",
+    "msw": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
